(upd): updated the image

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,14 +3,17 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
+@INPROCEEDINGS{10758532,
+  author={Zolin, Ivan and Chukanov, Vyacheslav and Pchitskaya, Ekaterina},
+  booktitle={2024 IEEE International Multi-Conference on Engineering, Computer and Information Sciences (SIBIRCON)}, 
+  title={TriDeFusion: Enhanced denoising algorithm for 3D fluorescence microscopy images integrating modified Noise2Noise and Non-local means}, 
+  year={2024},
+  volume={},
+  number={},
+  pages={211-216},
+  keywords={Three-dimensional displays;PSNR;Microscopy;Noise;Noise reduction;Fluorescence;Filtering algorithms;Sensitivity and specificity;Root mean square;Synthetic data;fluorescence microscopy;confocal microscopy;denoising;computer vision;deep learning;convolution neural network},
+  doi={10.1109/SIBIRCON63777.2024.10758532}}
+
 
 @article{einstein1950meaning,
   abbr={AJP},
